@@ -423,6 +423,9 @@ Next version (4.05.0):
 - GPR#1043: Allow Windows CRLF line-endings in ocamlyacc on Unix and Cygwin.
   (David Allsopp, review by Damien Doligez and Xavier Leroy)
 
+- GPR#1075: Ensure that zero-sized float arrays have zero tags.
+  (Mark Shinwell, Leo White)
+
 ### Toplevel and debugger:
 
 - PR#7060, GPR#1035: Print exceptions in installed custom printers
